--- a/Split_data.ipynb
+++ b/Split_data.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: center; font-size: 40px; font-weight: bold;\">\n",
+    "    Splitting Data\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,19 +28,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Splitting Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Path ke folder dataset\n",
+    "# Folder\n",
     "data_enhancement_path = \"Data_enhancement\"\n",
     "data_mask_path = \"Data_mask\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,18 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ambil semua file di folder data_enhancement\n",
+    "# Get all files in the data_enhancement folder\n",
     "image_files = sorted([f for f in os.listdir(data_enhancement_path) if f.endswith(\".bmp\")])\n",
     "\n",
-    "# Acak urutan data untuk pemisahan\n",
+    "# Shuffle the data order for splitting\n",
     "random.seed(42)\n",
     "random.shuffle(image_files)\n",
     "\n",
-    "# Hitung jumlah data untuk tiap subset\n",
+    "# Calculate the number of images for each subset\n",
     "total_images = len(image_files)\n",
     "train_count = int(0.7 * total_images)\n",
     "val_count = int(0.15 * total_images)"
@@ -57,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data berhasil dibagi!\n"
+      "Data successfully split!\n"
      ]
     }
    ],
@@ -75,31 +98,38 @@
     "    \"test\": image_files[train_count + val_count:]\n",
     "}\n",
     "\n",
-    "# Salin file ke folder yang sesuai\n",
+    "# Copy files to the corresponding folders\n",
     "for subset, files in data_splits.items():\n",
     "    for img_file in files:\n",
-    "        # Path sumber\n",
+    "        # Source path\n",
     "        img_src = os.path.join(data_enhancement_path, img_file)\n",
-    "        mask_file = \"mask_\" + img_file  # Menyesuaikan dengan nama mask\n",
+    "        mask_file = \"mask_\" + img_file  # Match the mask filename\n",
     "        mask_src = os.path.join(data_mask_path, mask_file)\n",
     "        \n",
-    "        # Path tujuan\n",
+    "        # Destination path\n",
     "        img_dst = os.path.join(output_dir, subset, \"images\", img_file)\n",
     "        mask_dst = os.path.join(output_dir, subset, \"masks\", mask_file)\n",
     "        \n",
-    "        # Salin file jika mask ada\n",
+    "        # Copy files if the mask exists\n",
     "        if os.path.exists(mask_src):\n",
     "            shutil.copy(img_src, img_dst)\n",
     "            shutil.copy(mask_src, mask_dst)\n",
     "        else:\n",
-    "            print(f\"Mask tidak ditemukan untuk {img_file}\")\n",
+    "            print(f\"Mask not found for {img_file}\")\n",
     "\n",
-    "print(\"Data berhasil dibagi!\")"
+    "print(\"Data successfully split!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check Result Data Split Folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,15 +152,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train - Images: 595, Masks: 595\n",
+      "Valid - Images: 127, Masks: 127\n",
+      "Test - Images: 129, Masks: 129\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the number of data in each folder\n",
+    "for subset in [\"train\", \"valid\", \"test\"]:\n",
+    "    image_count = len(os.listdir(os.path.join(output_dir, subset, \"images\")))\n",
+    "    mask_count = len(os.listdir(os.path.join(output_dir, subset, \"masks\")))\n",
+    "    print(f\"{subset.capitalize()} - Images: {image_count}, Masks: {mask_count}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
